--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -58,6 +58,11 @@ jobs:
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+      - name: Install Pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
+          run-script: true
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
